--- a/InventorySystem/ERP/ERP/settings.ini
+++ b/InventorySystem/ERP/ERP/settings.ini
@@ -2,10 +2,10 @@
 [SystemSettings]
 CompanyName = Command
 [Database]
-Servername=
-Databasename=
-Username=
-Password=
+Servername= sql12.freemysqlhosting.net
+Databasename= sql12277814
+Username= sql12277814
+Password= w1KgYiwCmH
 [Licensing]
 LicenseCode = p6brcwWbLgQyhYCMJdvugfI4NEQLUfVo
 ActivationCode = JmdYr5O8yyhWMSO8fqHsGA==
