--- a/InventorySystem/ERP/ERP/ERP.csproj
+++ b/InventorySystem/ERP/ERP/ERP.csproj
@@ -104,6 +104,9 @@
     <EmbeddedResource Include="CONDO\FrmModification.resx">
       <DependentUpon>FrmModification.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CONDO\frm_BillingInfo.resx">
+      <DependentUpon>frm_BillingInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CONDO\frm_CustomerInformation.resx">
       <DependentUpon>frm_CustomerInformation.cs</DependentUpon>
     </EmbeddedResource>
@@ -161,6 +164,12 @@
     </Compile>
     <Compile Include="CONDO\FrmModification.Designer.cs">
       <DependentUpon>FrmModification.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CONDO\frm_BillingInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CONDO\frm_BillingInfo.Designer.cs">
+      <DependentUpon>frm_BillingInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="CONDO\frm_CustomerInformation.cs">
       <SubType>Form</SubType>
@@ -236,6 +245,8 @@
     <Content Include="Accounting\Resources\CompanySetup.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\calendar.jpeg" />
+    <None Include="Resources\exit.jpg" />
     <Content Include="Resources\profile.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
