--- a/InventorySystem/ERP/ERP/ERP.csproj
+++ b/InventorySystem/ERP/ERP/ERP.csproj
@@ -67,6 +67,15 @@
     <ManifestKeyFile>ERP_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Data.AdoDotNetInterop, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="itextsharp">
+      <HintPath>..\..\..\..\..\..\BOK\ItextSharp\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data, Version=6.2.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Resources\MySql.Data.dll</HintPath>
@@ -74,6 +83,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms.Ribbon">
       <HintPath>Resources\System.Windows.Forms.Ribbon.dll</HintPath>
     </Reference>
@@ -86,6 +96,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ViewSOA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewSOA.Designer.cs">
+      <DependentUpon>ViewSOA.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Accounting\AccountingSetup.resx">
       <DependentUpon>AccountingSetup.cs</DependentUpon>
     </EmbeddedResource>
@@ -127,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CONDO\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONDO\Reporting\SOA.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Configuration\frmConfiguration.resx">
       <DependentUpon>frmConfiguration.cs</DependentUpon>
@@ -246,6 +265,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ViewSOA.resx">
+      <DependentUpon>ViewSOA.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="ERP_TemporaryKey.pfx" />
     <None Include="Properties\app.manifest" />
@@ -263,6 +285,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
     <Folder Include="Resources\SPLASH\" />
   </ItemGroup>
   <ItemGroup>
@@ -334,6 +357,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
