--- a/InventorySystem/ERP/ERP/ERP.csproj
+++ b/InventorySystem/ERP/ERP/ERP.csproj
@@ -86,6 +86,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms.Ribbon">
       <HintPath>Resources\System.Windows.Forms.Ribbon.dll</HintPath>
