--- a/InventorySystem/ERP/ERP/ERP.csproj
+++ b/InventorySystem/ERP/ERP/ERP.csproj
@@ -307,6 +307,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\SOA.jpg" />
+    <None Include="Resources\settle.png" />
     <Content Include="Resources\tenant.jpeg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
